[package]
name = "contract"
version = "0.1.0"
authors = ["Vadim Ilin <vadim@near.org>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.7.0"}
near-contract-standards = "5.7.0"
schemars = "0.8"
serde_json = { version = "1.0.133", features = ["preserve_order"] }
uint = { version = "=0.9.0", default-features = false }

[dev-dependencies]
insta = { version = "1.31.0", features = ["json", "redactions"] }
regex = "1"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
near-units = "0.2.0"
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []